添加菜单权限控制

--- a/public/admin/main/view/layout/layout.html
+++ b/public/admin/main/view/layout/layout.html
@@ -4,7 +4,6 @@
 </div>
 <!-- /main navbar -->
 
-
 <!-- Page container -->
 <div class="page-container">
 
@@ -19,11 +18,8 @@
         </div>
         <!-- /main sidebar -->
 
-
         <!-- Main content -->
-        <div class="content-wrapper" id = "page-content">
-
-        </div>
+        <div class="content-wrapper" id = "page-content"></div>
         <!-- /main content -->
 
     </div>
@@ -31,5 +27,3 @@
 
 </div>
 <!-- /page container -->
-
-
