--- a/public/admin/main/view/layout/part/pageSidebar.html
+++ b/public/admin/main/view/layout/part/pageSidebar.html
@@ -3,24 +3,23 @@
     <div class="category-content no-padding">
         <ul class="navigation navigation-main navigation-accordion">
 
-            <!-- Main -->
+            <!-- 首页 -->
             <li class="navigation-header"><span>菜单</span> <i class="icon-menu" title="菜单"></i></li>
-            <li><a href="#/main/index/index"><i class="icon-home4"></i> <span>首页</span></a></li>
-            <!-- /main -->
+            <li><a href="#/main/index/index" class=""><i class="icon-home4"></i> <span>首页</span></a></li>
+            <!-- /首页 -->
 
             <!-- 定时任务 -->
             <li class="navigation-header"><span>定时任务</span> <i class="icon-sort-time-asc" title="定时任务"></i></li>
-            <li>
-                <a href="#/main/crontab/index"><i class="icon-sort-time-asc"></i> <span>定时任务</span></a>
-            </li>
+            <li><a href="#/main/crontab/index"><i class="icon-sort-time-asc"></i> <span>定时任务</span></a> </li>
+            <!-- /定时任务 -->
 
-            <!-- Forms -->
+            <!-- 用户管理 -->
             <li class="navigation-header"><span>用户管理</span> <i class="icon-menu" title="用户管理"></i></li>
             <li>
                 <a><i class="icon-pencil3"></i> <span>管理员用户（后台）</span></a>
                 <ul>
-                    <li class="main-admin-memberEditView"><a href="#/main/admin/memberListView">用户管理</a></li>
-                    <li class="main-admin-groupEditView"><a href="#/main/admin/groupListView">分组管理</a></li>
+                    <li class="main-admin-memberEditView"><a href="#/main/admin/memberListView" >用户管理</a></li>
+                    <li class="main-admin-groupEditView"><a href="#/main/admin/groupListView" >分组管理</a></li>
                 </ul>
             </li>
             <li class="hidden">
@@ -30,10 +29,10 @@
                     <li><a href="">分组管理</a></li>
                 </ul>
             </li>
-            <!-- /forms -->
+            <!-- /用户管理 -->
 
-            <!-- Appearance -->
-            <li class="navigation-header"><span>个人中心</span> <i class="icon-menu" title="个人中"></i></li>
+            <!-- 个人中心 -->
+            <li class="navigation-header"><span>个人中心</span> <i class="icon-menu" title="个人中心"></i></li>
             <li>
                 <a href="#"><i class="icon-grid"></i> <span>个人信息</span></a>
                 <ul>
@@ -44,7 +43,7 @@
             <li>
                 <a href="#/main/auth/logout"><i class="icon-home4"></i> <span>注销</span></a></li>
             </li>
-            <!-- /appearance -->
+            <!-- /个人中心 -->
         </ul>
     </div>
 </div>
