更新说明文档

--- a/public/admin/main/view/index/index.html
+++ b/public/admin/main/view/index/index.html
@@ -12,7 +12,45 @@
 <!-- Content area -->
 <div class="content">
 
+    演示地址
+    Alpaca-Spa-Laravel : http://full.tkc8.com
+
+    Alpaca-Spa : http://www.tkc8.com
+
+    代码 码云 : http://git.oschina.net/cc-sponge/Alpaca-Spa-Laravel
+
+    代码 Github: https://github.com/big-sponge/Alpaca-Spa-Laravel
+
     <div class="row">
+
+        <div class="col-md-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h6 class="panel-title">源码地址<a class="heading-elements-toggle"><i class="icon-more"></i></a></h6>
+
+                </div>
+
+                <div class="panel-body">
+                    <p>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        Alpaca-Spa-Laravel :<br><br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        码云 :  &nbsp;&nbsp;<a href="http://git.oschina.net/cc-sponge/Alpaca-Spa-Laravel" target="_blank">http://git.oschina.net/cc-sponge/Alpaca-Spa-Laravel</a><br><br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        Github: &nbsp;&nbsp;<a href="https://github.com/big-sponge/Alpaca-Spa-Laravel" target="_blank">https://github.com/big-sponge/Alpaca-Spa-Laravel</a><br><br>
+                    </p>
+                    <p>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        Alpaca-Spa :<br><br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        码云 :  &nbsp;&nbsp;<a href="https://gitee.com/cc-sponge/alpaca-spa-2.0" target="_blank">https://gitee.com/cc-sponge/alpaca-spa-2.0</a><br><br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        Github: &nbsp;&nbsp;<a href="https://github.com/big-sponge/Alpaca-Spa-2.0" target="_blank">https://github.com/big-sponge/Alpaca-Spa-2.0</a><br><br>
+                    </p>
+                </div>
+            </div>
+        </div>
+
         <div class="col-md-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
