--- a/public/app/main/view/index/card.html
+++ b/public/app/main/view/index/card.html
@@ -11,35 +11,35 @@
             <div class="list-block">
                 <ul>
                     <li>
-                        <a href="/demos/card/simple-card" class="item-link item-content">
+                        <a href="#/main/card/simpleCard" class="item-link item-content">
                             <div class="item-inner">
                                 <div class="item-title">简单卡片</div>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="/demos/card/styled-card" class="item-link item-content">
+                        <a href="#/main/card/styledCard" class="item-link item-content">
                             <div class="item-inner">
                                 <div class="item-title">风格卡片</div>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="/demos/card/facebook-card" class="item-link item-content">
+                        <a href="#/main/card/facebookCard" class="item-link item-content">
                             <div class="item-inner">
                                 <div class="item-title">facebook卡片</div>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="/demos/card/view-card" class="item-link item-content">
+                        <a href="#/main/card/viewCard" class="item-link item-content">
                             <div class="item-inner">
                                 <div class="item-title">在列表视图中卡片</div>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="/demos/card/list-card" class="item-link item-content">
+                        <a href="#/main/card/listCard" class="item-link item-content">
                             <div class="item-inner">
                                 <div class="item-title">列表卡片</div>
                             </div>
