--- a/public/app/main/view/index/cityPicker.html
+++ b/public/app/main/view/index/cityPicker.html
@@ -1,13 +1,13 @@
-<div class="page page-current" id="page-datetime-picker">
+<div id="page-city-picker" class="page page-current">
     <header class="bar bar-nav">
         <a class="button button-link button-nav pull-left back" href="/demos">
             <span class="icon icon-left"></span>
             返回
         </a>
-        <h1 class="title">时间日期选择</h1>
+        <h1 class="title">省市区选择</h1>
     </header>
     <div class="content native-scroll">
-        <div class="content-block-title">时间日期</div>
+        <div class="content-block-title">省市区</div>
         <div class="content-block">
             <div class="list-block">
                 <ul>
@@ -15,9 +15,9 @@
                     <li>
                         <div class="item-content">
                             <div class="item-inner">
-                                <div class="item-title label">时间日期</div>
+                                <div class="item-title label">省市区</div>
                                 <div class="item-input">
-                                    <input type="text" placeholder="" id="datetime-picker" readonly="">
+                                    <input type="text" placeholder="" id="city-picker" readonly="">
                                 </div>
                             </div>
                         </div>
