--- a/public/app/main/view/index/swiper.html
+++ b/public/app/main/view/index/swiper.html
@@ -1,22 +1,23 @@
-<div class="page-group">
-    <div id="page-swiper" class="page page-current">
-        <header class="bar bar-nav">
-            <a class="button button-link button-nav pull-left back" href="/demos">
-                <span class="icon icon-left"></span>
-                返回
-            </a>
-            <h1 class="title">幻灯片</h1>
-        </header>
-        <div class="content native-scroll" id="">
-            <div class="swiper-container swiper-container-horizontal" data-space-between="10">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide swiper-slide-active" style="width: 665px; margin-right: 10px;"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i1/TB1n3rZHFXXXXX9XFXXXXXXXXXX_!!0-item_pic.jpg_640x640q60.jpg" alt="" style="width: 100%"></div>
-                    <div class="swiper-slide swiper-slide-next" style="width: 665px; margin-right: 10px;"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i4/TB10rkPGVXXXXXGapXXXXXXXXXX_!!0-item_pic.jpg_640x640q60.jpg" alt="" style="width: 100%"></div>
-                    <div class="swiper-slide" style="width: 665px; margin-right: 10px;"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i1/TB1kQI3HpXXXXbSXFXXXXXXXXXX_!!0-item_pic.jpg_640x640q60.jpg" alt="" style="width: 100%"></div>
-                </div>
-                <div class="swiper-pagination"><span class="swiper-pagination-bullet swiper-pagination-bullet-active"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span></div>
+<div id="page-swiper" class="page page-current">
+    <header class="bar bar-nav">
+        <a class="button button-link button-nav pull-left back" href="/demos">
+            <span class="icon icon-left"></span>
+            返回
+        </a>
+        <h1 class="title">幻灯片</h1>
+    </header>
+    <div class="content native-scroll" id="">
+        <div class="swiper-container swiper-container-horizontal" data-space-between="10">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide swiper-slide-active" style="width: 665px; margin-right: 10px;"><img
+                        src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i1/TB1n3rZHFXXXXX9XFXXXXXXXXXX_!!0-item_pic.jpg_640x640q60.jpg" alt="" style="width: 100%"></div>
+                <div class="swiper-slide swiper-slide-next" style="width: 665px; margin-right: 10px;"><img
+                        src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i4/TB10rkPGVXXXXXGapXXXXXXXXXX_!!0-item_pic.jpg_640x640q60.jpg" alt="" style="width: 100%"></div>
+                <div class="swiper-slide" style="width: 665px; margin-right: 10px;"><img
+                        src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i1/TB1kQI3HpXXXXbSXFXXXXXXXXXX_!!0-item_pic.jpg_640x640q60.jpg" alt="" style="width: 100%"></div>
             </div>
+            <div class="swiper-pagination"><span class="swiper-pagination-bullet swiper-pagination-bullet-active"></span><span class="swiper-pagination-bullet"></span><span
+                    class="swiper-pagination-bullet"></span></div>
         </div>
     </div>
-
 </div>
