--- a/public/app/main/view/index/infiniteScroll.html
+++ b/public/app/main/view/index/infiniteScroll.html
@@ -1,39 +1,36 @@
-<div class="page-group">
-    <div id="page-infinite-scroll" class="page page-current">
-        <header class="bar bar-nav">
-            <a class="button button-link button-nav pull-left back" href="/demos">
-                <span class="icon icon-left"></span>
-                返回
-            </a>
-            <h1 class="title">无限滚动</h1>
-        </header>
-        <div class="content native-scroll">
-            <div class="list-block">
-                <ul>
-                    <li>
-                        <a href="/demos/infinite-scroll/bottom-infinite-scroll" class="item-link item-content">
-                            <div class="item-inner">
-                                <div class="item-title">底部无限滚动</div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/demos/infinite-scroll/top-infinite-scroll" class="item-link item-content">
-                            <div class="item-inner">
-                                <div class="item-title">顶部无限滚动</div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/demos/infinite-scroll/fixed-tab-infinite-scroll" class="item-link item-content">
-                            <div class="item-inner">
-                                <div class="item-title">多个标签页下的无限滚动</div>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+<div id="page-infinite-scroll" class="page page-current">
+    <header class="bar bar-nav">
+        <a class="button button-link button-nav pull-left back" href="/demos">
+            <span class="icon icon-left"></span>
+            返回
+        </a>
+        <h1 class="title">无限滚动</h1>
+    </header>
+    <div class="content native-scroll">
+        <div class="list-block">
+            <ul>
+                <li>
+                    <a href="#/main/infinite/bottomInfiniteScroll" class="item-link item-content">
+                        <div class="item-inner">
+                            <div class="item-title">底部无限滚动</div>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#/main/infinite/topInfiniteScroll" class="item-link item-content">
+                        <div class="item-inner">
+                            <div class="item-title">顶部无限滚动</div>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#/main/infinite/fixedTabInfiniteScroll" class="item-link item-content">
+                        <div class="item-inner">
+                            <div class="item-title">多个标签页下的无限滚动</div>
+                        </div>
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
-
 </div>
