--- a/public/app/main/view/index/modal.html
+++ b/public/app/main/view/index/modal.html
@@ -1,21 +1,18 @@
-<div class="page-group">
-    <div id="page-modal" class="page page-current">
-        <header class="bar bar-nav">
-            <a class="button button-link button-nav pull-left back" href="/demos">
-                <span class="icon icon-left"></span>
-                返回
-            </a>
-            <h1 class="title">对话框</h1>
-        </header>
-        <div class="content native-scroll">
-            <div class="content-padded">
-                <p><a class="alert-text">只有文案的alert</a></p>
-                <p><a class="alert-text-title">带文案和标题的alert</a></p>
-                <p><a class="alert-text-title-callback">带回调函数的alert</a></p>
-                <p><a class="confirm-ok">Confirm</a></p>
-                <p><a class="prompt-ok">Prompt</a></p>
-            </div>
+<div id="page-modal" class="page page-current">
+    <header class="bar bar-nav">
+        <a class="button button-link button-nav pull-left back">
+            <span class="icon icon-left"></span>
+            返回
+        </a>
+        <h1 class="title">对话框</h1>
+    </header>
+    <div class="content native-scroll">
+        <div class="content-padded">
+            <p><a class="alert-text">只有文案的alert</a></p>
+            <p><a class="alert-text-title">带文案和标题的alert</a></p>
+            <p><a class="alert-text-title-callback">带回调函数的alert</a></p>
+            <p><a class="confirm-ok">Confirm</a></p>
+            <p><a class="prompt-ok">Prompt</a></p>
         </div>
     </div>
-
 </div>
