--- a/public/app/main/view/index/index.html
+++ b/public/app/main/view/index/index.html
@@ -5,7 +5,7 @@
             关于
             <span class="icon icon-menu"></span>
         </a>
-        <h1 class="title">SUI Mobile</h1>
+        <h1 class="title">Alpaca SUI Mobile</h1>
     </header>
     <div class="bar bar-standard bar-footer">
         <a class="icon icon-edit pull-left"></a>
