处理返回按钮

--- a/public/app/main/view/index/preloader.html
+++ b/public/app/main/view/index/preloader.html
@@ -1,6 +1,6 @@
 <div id="page-preloader" class="page page-current">
     <header class="bar bar-nav">
-        <a class="button button-link button-nav pull-left back" href="/demos">
+        <a class="button button-link button-nav pull-left back">
             <span class="icon icon-left"></span>
             返回
         </a>
