--- a/public/app/main/view/index/bar.html
+++ b/public/app/main/view/index/bar.html
@@ -1,6 +1,6 @@
 <div class="page page-current" id="page-bar">
     <header class="bar bar-nav">
-        <a class="button button-link button-nav pull-left back" href="#/main/index/index">
+        <a class="button button-link button-nav pull-left back">
             <span class="icon icon-left"></span>
             返回
         </a>
