修复返回按钮

--- a/public/app/main/view/list/viewList.html
+++ b/public/app/main/view/list/viewList.html
@@ -1,7 +1,7 @@
 <div class="page-group">
     <div id="page-view-list" class="page page-current">
         <header class="bar bar-nav">
-            <a class="button button-link button-nav pull-left back" href="/demos/list">
+            <a class="button button-link button-nav pull-left back">
                 <span class="icon icon-left"></span>
                 返回
             </a>
