--- a/public/app/main/view/infinite/bottomInfiniteScroll.html
+++ b/public/app/main/view/infinite/bottomInfiniteScroll.html
@@ -1,6 +1,6 @@
 <div id="page-infinite-scroll-bottom" class="page page-current">
     <header class="bar bar-nav">
-        <a class="button button-link button-nav pull-left back" href="/demos/infinite-scroll">
+        <a class="button button-link button-nav pull-left back">
             <span class="icon icon-left"></span>
             返回
         </a>
