--- a/public/app/main/view/infinite/fixedTabInfiniteScroll.html
+++ b/public/app/main/view/infinite/fixedTabInfiniteScroll.html
@@ -1,6 +1,6 @@
 <div id="page-fixed-tab-infinite-scroll" class="page page-current">
     <header class="bar bar-nav">
-        <a class="button button-link button-nav pull-left back" href="/demos/infinite-scroll">
+        <a class="button button-link button-nav pull-left back">
             <span class="icon icon-left"></span>
             返回
         </a>
