--- a/public/app/main/view/tabs/fixedTab.html
+++ b/public/app/main/view/tabs/fixedTab.html
@@ -1,7 +1,7 @@
 <div class="page-group">
     <div id="page-fixed-tab" class="page page-current">
         <header class="bar bar-nav">
-            <a class="button button-link button-nav pull-left back" href="/demos/tabs">
+            <a class="button button-link button-nav pull-left back">
                 <span class="icon icon-left"></span>
                 返回
             </a>
