--- a/public/app/main/view/index/test.html
+++ b/public/app/main/view/index/test.html
@@ -1,1 +1,89 @@
-<div class="content-block">这里是content</div>
+<div class="page-group">
+    <div id="page-nav-bar" class="page page-current">
+        <header class="bar bar-nav">
+            <a class="button button-link button-nav pull-left back">
+                <span class="icon icon-left"></span>
+                返回
+            </a>
+            <h1 class="title">测试</h1>
+        </header>
+        <nav class="bar bar-tab">
+            <a class="tab-item external active">
+                <span class="icon icon-home"></span>
+                <span class="tab-label">主页</span>
+            </a>
+            <a class="tab-item external">
+                <span class="icon icon-star"></span>
+                <span class="tab-label">发现</span>
+                <span class="badge">2</span>
+            </a>
+            <a class="tab-item external">
+                <span class="icon icon-me"></span>
+                <span class="tab-label">我的</span>
+            </a>
+        </nav>
+        <div class="content native-scroll">
+            <div class="content-inner">
+                <div class="list-block">
+                    <ul>
+                        <li>
+                            <a class="item-link item-content" onclick="test()">
+                                <script>
+                                    var test = function () {
+                                        Alpaca.to("#/main/auth/getWxCode");
+                                    };
+                                </script>
+                                <div>
+                                    <div class="item-title">微信登录</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#/main/auth/loginView" class="item-link item-content">
+                                <div>
+                                    <div class="item-title">账号登录</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="item-link item-content" onclick="getUserInfo()">
+                                <script>
+                                    var getUserInfo = function () {
+                                        AlpacaAjax({
+                                            url: g_url + API['auth_wxInfo'],
+                                            data: {},
+                                            newSuccess: function (data) {
+                                                console.log(data);
+                                            },
+                                        });
+                                    };
+                                </script>
+                                <div>
+                                    <div class="item-title">获取用户信息</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="item-link item-content" onclick="logout()">
+                                <script>
+                                    var logout = function () {
+                                        AlpacaAjax({
+                                            url: g_url + API['auth_logout'],
+                                            data: {},
+                                            newSuccess: function (data) {
+                                                console.log(data);
+                                            },
+                                        });
+                                    };
+                                </script>
+                                <div>
+                                    <div class="item-title">注销</div>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
