--- a/public/app/main/view/index/index.html
+++ b/public/app/main/view/index/index.html
@@ -158,6 +158,18 @@
                     </li>
                 </ul>
             </div>
+            <div class="content-block-title">测试</div>
+            <div class="list-block">
+                <ul>
+                    <li>
+                        <a href="#/main/index/test" class="item-link item-content">
+                            <div class="item-inner">
+                                <div class="item-title">测试</div>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
