websocket实现文字聊天示例

--- a/public/admin/main/view/ws/index.html
+++ b/public/admin/main/view/ws/index.html
@@ -52,6 +52,12 @@
                 <!-- Sub navigation -->
                 <div class="sidebar-category">
                     <div class="category-title">
+                        <span>扫码加入聊天</span>
+                    </div>
+                    <div style="text-align: center">
+                        <img src="{{= g_baseUrl}}common/img/chat-app-qr.png" style="width: 180px">
+                    </div>
+                    <div class="category-title">
                         <span>在线列表</span>
                     </div>
                     <div class="category-content">
