--- a/public/app/main/view/index/test.html
+++ b/public/app/main/view/index/test.html
@@ -81,6 +81,18 @@
                                 </div>
                             </a>
                         </li>
+                        <li>
+                            <a class="item-link item-content" onclick="chart()">
+                                <script>
+                                    var chart = function () {
+                                        Alpaca.to("#/main/chat/index")
+                                    };
+                                </script>
+                                <div>
+                                    <div class="item-title">WebSocket</div>
+                                </div>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
