跟新ws代码， 返回登录人信息

--- a/public/app/main/view/chat/addChat.html
+++ b/public/app/main/view/chat/addChat.html
@@ -1,3 +1,13 @@
+{{ if(it.member.isMy) { }}
+
+<!-- 自己的发言-->
+
+{{ }else{  }}
+
+<!-- 不是自己的发言-->
+
+{{ }  }}
+
 <li>
     <div class="item-content">
         <div class="item-media"><img src="{{= it.member.avatar}}" width="44"></div>
