--- a/public/admin/main/view/index/wxMenu.html
+++ b/public/admin/main/view/index/wxMenu.html
@@ -1,1 +1,35 @@
-HELLO : <?spa echo it.name ?> -- {{= it.name }}
+<div class="page-header page-header-default">
+    <div class="page-header-content">
+        <div class="page-title">
+            <h4><i class="icon-arrow-left52 position-left"></i> <span class="text-semibold">微信功能</span> - 菜单管理</h4>
+        </div>
+    </div>
+
+    <div class="breadcrumb-line">
+        <ul class="breadcrumb">
+            <li><a><i class="icon-home2 position-left"></i> 微信功能</a></li>
+            <li class="active">菜单管理</li>
+        </ul>
+    </div>
+</div>
+<!-- /page header -->
+
+<!-- Content area -->
+<div class="content">
+    <!-- Basic responsive configuration -->
+    <div class="panel panel-flat" style="margin-bottom: 0;border: 0">
+        <div class="panel panel-flat">
+            <div class="panel-body">
+                <div class="row">
+                    <div style="height: 720px">
+                        <iframe frameborder="no" src="/admin/common/wxMenu/index.html" style="width: 100%; height: 100%"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /basic responsive configuration -->
+    <!-- Footer -->
+    <div id="page-content-footer"></div>
+    <!-- /footer -->
+</div>
