添加微信菜单功能

--- a/public/admin/main/view/layout/part/pageSidebar.html
+++ b/public/admin/main/view/layout/part/pageSidebar.html
@@ -25,8 +25,8 @@
             <!-- 定时任务 -->
             <li class="navigation-header"><span>功能示例</span> <i class="icon-sort-time-asc" title="功能示例"></i></li>
             <li><a href="#/main/crontab/index"><i class="icon-sort-time-asc"></i> <span>定时任务</span></a></li>
+            <li><a href="#/main/wechat/menu"><i class="icon-sort-time-asc"></i> <span>微信菜单</span></a></li>
             <li><a href="#/main/ws/index"><i class=" icon-bubbles4"></i> <span>WebSocket</span></a></li>
-            <li><a href="#/main/index/wxMenu"><i class="icon-sort-time-asc"></i> <span>微信菜单</span></a></li>
             <!-- /定时任务 -->
 
             <!-- 用户管理 -->
