--- a/public/admin/main/view/layout/part/pageSidebar.html
+++ b/public/admin/main/view/layout/part/pageSidebar.html
@@ -26,7 +26,8 @@
             <li><a href="#/main/crontab/index"><i class="icon-sort-time-asc"></i> <span>定时任务</span></a></li>
             <li><a href="#/main/wechat/menu"><i class="icon-sort-time-asc"></i> <span>微信菜单</span></a></li>
             <li><a href="#/main/form/ueditor"><i class="icon-sort-time-asc"></i> <span>ueditor编辑器</span></a></li>
-            <li><a href="#/main/ws/index"><i class=" icon-bubbles4"></i> <span>WebSocket</span></a></li>
+            <li><a href="#/main/ws/index"><i class="icon-bubbles4"></i> <span>WebSocket</span></a></li>
+            <li><a href="http://full.tkc8.com/admin#/main/ws/ocr" target="_blank" class="ignore-alpaca-router"><i class="icon-sort-time-asc"></i> <span>OCR示例</span></a></li>
             <!-- /定时任务 -->
 
             <!-- 用户管理 -->
