--- a/public/app/main/view/index/test.html
+++ b/public/app/main/view/index/test.html
@@ -93,6 +93,16 @@
                                 </div>
                             </a>
                         </li>
+                        <li>
+                            <a href="#/main/test/posts" class="item-link item-content">
+                                <div class="item-title">评论样式</div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#/main/test/ocr" class="item-link item-content">
+                                <div class="item-title">OCR-TO-BAIDU</div>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
