--- a/public/admin/main/view/ws/ocr.html
+++ b/public/admin/main/view/ws/ocr.html
@@ -24,7 +24,7 @@
                 <div class="dataTables_filter"><input type="text" class="" placeholder="请输入设备号码" id="table-page-key">
                     <button type="button" class="btn btn-primary" style="vertical-align: top" onclick="submitDeviceId()">提交设备号</button>
                     <p>(获取设备号：手机访问 http://full.tkc8.com/app/#/main/test/ocr 或者扫下面的二维码) </p>
-                    <div style="text-align: center"> <img src="/server/ocr/qrCode?token={{= it.token}}" style="width: 180px"> </div>
+                    <div style="text-align: center"><img src="/server/ocr/qrCode?token={{= it.token}}" style="width: 180px"></div>
                 </div>
             </div>
 
@@ -55,28 +55,39 @@
 
 <script>
 
-    var token     = "{{= it.token}}";
+    var token = "{{= it.token}}";
     console.log(token);
     var ws_url = Alpaca.MainModule.WsController.webServer.url;
-    var ws_ocr     = new WebSocket(ws_url);
 
-    ws_ocr.onopen = function () {
-        if(token){
+    var ws_ocr = null;
+    if (!Alpaca.MainModule.WsController.webServer.ws_ocr) {
+        ws_ocr        = new WebSocket(ws_url);
+        ws_ocr.onopen = function () {
+            if (token) {
+                var request    = {};
+                request.action = API['ws_ocr_setDeviceId'];
+                request.data   = {device_id: 'token_' + token};
+                ws_ocr.send(JSON.stringify(request));
+            }
+            Alpaca.MainModule.WsController.webServer.ws_ocr = ws_ocr;
+        };
+
+        ws_ocr.onmessage = function (event) {
+            Alpaca.to('#/main/ws/pocr', event);
+        };
+    } else {
+        ws_ocr = Alpaca.MainModule.WsController.webServer.ws_ocr;
+        if (token) {
             var request    = {};
             request.action = API['ws_ocr_setDeviceId'];
-            request.data   = {device_id: 'token_'+token};
+            request.data   = {device_id: 'token_' + token};
             ws_ocr.send(JSON.stringify(request));
         }
-    };
+    }
 
-
-    ws_ocr.onmessage = function (event) {
-        Alpaca.to('#/main/ws/pocr', event);
-    };
-
-    var submitDeviceId =function(){
-        var deviceId= $('#table-page-key').val();
-        if(!deviceId){
+    var submitDeviceId = function () {
+        var deviceId = $('#table-page-key').val();
+        if (!deviceId) {
             return;
         }
 
