--- a/public/admin/main/view/layout/part/pageSidebar.html
+++ b/public/admin/main/view/layout/part/pageSidebar.html
@@ -24,10 +24,15 @@
             <!-- 定时任务 -->
             <li class="navigation-header"><span>功能示例</span> <i class="icon-sort-time-asc" title="功能示例"></i></li>
             <li><a href="#/main/crontab/index"><i class="icon-sort-time-asc"></i> <span>定时任务</span></a></li>
-            <li><a href="#/main/wechat/menu"><i class="icon-sort-time-asc"></i> <span>微信菜单</span></a></li>
-            <li><a href="#/main/form/ueditor"><i class="icon-sort-time-asc"></i> <span>ueditor编辑器</span></a></li>
             <li><a href="#/main/ws/index"><i class="icon-bubbles4"></i> <span>WebSocket</span></a></li>
             <li><a href="#/main/ws/ocr"><i class="icon-sort-time-asc"></i> <span>OCR示例</span></a></li>
+            <li>
+                <a><i class="icon-pencil3"></i> <span>插件示例</span></a>
+                <ul>
+                    <li><a href="#/main/wechat/menu"><i class="icon-sort-time-asc"></i> <span>微信菜单</span></a></li>
+                    <li><a href="#/main/form/ueditor"><i class="icon-sort-time-asc"></i> <span>ueditor编辑器</span></a></li>
+                </ul>
+            </li>
             <!-- /定时任务 -->
 
             <!-- 用户管理 -->
