添加基于腾讯云的图片上传功能

--- a/public/admin/main/view/layout/part/pageSidebar.html
+++ b/public/admin/main/view/layout/part/pageSidebar.html
@@ -27,6 +27,12 @@
             <li><a href="#/main/ws/index"><i class="icon-bubbles4"></i> <span>WebSocket</span></a></li>
             <li><a href="#/main/ws/ocr"><i class="icon-sort-time-asc"></i> <span>OCR示例</span></a></li>
             <li>
+                <a><i class="icon-pencil3"></i> <span>图片管理</span></a>
+                <ul>
+                    <li class="main-photo-storeAddView"><a href="#/main/photo/storeListView"><i class="icon-sort-time-asc"></i> <span>图片库</span></a></li>
+                </ul>
+            </li>
+            <li>
                 <a><i class="icon-pencil3"></i> <span>插件示例</span></a>
                 <ul>
                     <li><a href="#/main/wechat/menu"><i class="icon-sort-time-asc"></i> <span>微信菜单</span></a></li>
