--- a/public/admin/main/view/photo/storeListDisplay.html
+++ b/public/admin/main/view/photo/storeListDisplay.html
@@ -15,7 +15,11 @@
     <tbody>
     <?spa foreach(it.list as key => item): ?>
     <tr>
-        <td><img src="http://qqcos-test.tkc8.com/{{= item.path}}?imageView2/1/w/60/h/60"></td>
+        <td>
+            <a href="http://qqcos-test.tkc8.com/{{= item.path}}?imageView2/0/w/750&image.jpg" class="fancybox-button" data-rel="fancybox-button">
+                <img src="http://qqcos-test.tkc8.com/{{= item.path}}?imageView2/1/w/60/h/60">
+            </a>
+        </td>
         <td>{{= item.name }}</td>
         <td>http://qqcos-test.tkc8.com/{{= item.path }}</td>
         <td>{{= item.create_time}}</td>
