添加注册、找回密码功能

--- a/public/admin/main/view/auth/loginView.html
+++ b/public/admin/main/view/auth/loginView.html
@@ -72,14 +72,30 @@
                                 <i class="icon-lock2 text-muted"></i>
                             </div>
                         </div>
+                        <div class="form-group login-options">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <label class="checkbox-inline">
+                                        <div class="checker"><span class="checked"><input type="checkbox" class="styled" checked="checked"></span></div>
+                                        记住我
+                                    </label>
+                                </div>
+
+                                <div class="col-sm-6 text-right">
+                                    <a href="#/main/auth/forgetView">忘记密码?</a>
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="form-group">
                             <button type="button" class="btn btn-primary btn-block btn-sub-login">登录 <i class="icon-circle-right2 position-right"></i></button>
                         </div>
-
-                        <div class="text-center">
-                            <a >忘记密码?</a>
-                        </div>
+                        <div class="content-divider text-muted form-group"><span>其他方式登录</span></div>
+                        <ul class="list-inline form-group list-inline-condensed text-center">
+                            <li><a class="btn border-indigo text-indigo btn-flat btn-icon btn-rounded"><i class="icon-facebook"></i></a></li>
+                        </ul>
+                        <div class="content-divider text-muted form-group"><span>还没有账户?</span></div>
+                        <a href="#/main/auth/regView" class="btn btn-default btn-block content-group">注册</a>
                     </div>
                 </form>
                 <!-- /simple login form -->
